k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passgen
  labels:
    app: passgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passgen
  template:
    metadata:
      labels:
        app: passgen
    spec:
      containers:
        - name: passgen
          image: kristianwindsor/passgen.site
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "20Mi"
              cpu: "10m"
            limits:
              memory: "40Mi"
              cpu: "20m"
