k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passgen
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: passgen.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: passgen
            port:
              number: 80
  tls:
  - hosts:
    - passgen.site
    secretName: passgen-cert
